Projects and Links added

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12133522795" class="contact-link">+1 (917) 251-4056</a>
+              <a href="tel:+19172514056" class="contact-link">+1 (917) 251-4056</a>
+              <a href="tel:+919754022954" class="contact-link">+91 97540 22954</a>
             </div>
 
           </li>
@@ -101,7 +102,7 @@
             <div class="contact-info">
               <p class="contact-title">Resume</p>
 
-              <a href="https://drive.google.com/file/d/12ugB1xCsu11RnZtx_neUy2fSISGNicJ-/view?usp=sharing" class="contact-link" target="_blank">Devpoojit Verma</a>
+              <a href="https://drive.google.com/file/d/1Mry64h7Moj-i_DIIU06Q_tZ-s541hNYa/view?usp=sharing" class="contact-link" target="_blank">Devpoojit Verma</a>
             </div>
 
           </li>
@@ -195,7 +196,7 @@
 
         <section class="about-text">
           <p>
-            Tech-savvy Full Stack Web Developer with a balanced proficiency in both fundamental front-end and server-side languages, 
+            Full Stack Web Developer with a balanced proficiency in both fundamental front-end and server-side languages, 
             alongside a comprehensive understanding of database functionality. Skilled in orchestrating the full spectrum of web development, 
             from creating servers and databases to designing and developing APIs. Demonstrates analytical precision and a collaborative work ethic, consistently achieving superior results.
           </p>
@@ -208,7 +209,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What I do</h3>
+          <h3 class="h3 service-title">My Projects</h3>
 
           <ul class="service-list">
 
@@ -220,10 +221,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Java</h4>
+                <h4 class="h4 service-item-title"><a href="http://dev-quiz.com" target="_blank">Quiz Platform</a></h4>
 
                 <p class="service-item-text">
-                  FIXME: Information about Java proficiency and experience.
+                  A quiz platform based on SpringBoot and Angular, hosted on AWS-EC2.
                 </p>
               </div>
 
@@ -236,10 +237,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">SpringBoot</h4>
+                <h4 class="h4 service-item-title"><a href="https://devpoojit.github.io/omdb/" target="_blank">Movie Finder</a></h4>
 
                 <p class="service-item-text">
-                  FIXME: Information about SpringBoot proficiency and experience.
+                  A movie search platform that uses the OMDB API to fetch movie details.
                 </p>
               </div>
 
@@ -252,10 +253,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Angular</h4>
+                <h4 class="h4 service-item-title"><a href="https://devpoojit.github.io/Weather-App/" target="_blank">Weather App</a></h4>
 
                 <p class="service-item-text">
-                  FIXME: Information about Angular proficiency and experience.
+                  A weather app that uses the OpenWeather API to fetch weather details.
                 </p>
               </div>
 
@@ -268,10 +269,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Finance</h4>
+                <h4 class="h4 service-item-title"><a href="https://github.com/Devpoojit/Token_Ring" target="_blank">Token Ring Simulator</a></h4>
 
                 <p class="service-item-text">
-                  FIXME: Information about Finance proficiency and experience.
+                  Academic project to simulate the token ring network developed in Java.
                 </p>
               </div>
 
