--- a/index.html
+++ b/index.html
@@ -371,7 +371,20 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Java</h5>
-                <data value="80">80%</data>
+                <data value="100"></data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 100%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">SpringBoot</h5>
+                <data value="80"></data>
               </div>
 
               <div class="skill-progress-bg">
@@ -383,25 +396,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">SpringBoot</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
                 <h5 class="h5">Angular</h5>
-                <data value="90">90%</data>
+                <data value="60"></data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
+                <div class="skill-progress-fill" style="width: 60%;"></div>
               </div>
 
             </li>
@@ -410,7 +410,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">React</h5>
-                <data value="50">50%</data>
+                <data value="50"></data>
               </div>
 
               <div class="skill-progress-bg">
@@ -877,7 +877,7 @@
           </figure>
         </section>
 
-        <section class="contact-form">
+        <!-- <section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
 
@@ -898,7 +898,7 @@
 
           </form>
 
-        </section>
+        </section> -->
 
       </article>
 
